--- a/src/app/modules/auth/login/login.component.html
+++ b/src/app/modules/auth/login/login.component.html
@@ -1,6 +1,6 @@
 <!-- <div fxLayoutAlign="start start" > -->
-<div style="display:flex;justify-content: space-around;width:100%;flex-wrap: wrap;margin-top:60px">
-    <div style="width:50%;font-size: 14px;margin:30px">
+<div class="overallcontainer">
+    <div class="description">
         <div style="font-size:26px;margin-bottom:30px;flex-wrap: wrap;">Features and Purpose of Education Management
             System
         </div>
@@ -55,7 +55,7 @@
             by defining question and answer that can be re-used over and over again that can saves teachers' huge amount of time.
         </p>
     </div>
-    <div style="margin-top:150px;">
+    <div class="loginbox">
         <mat-card>
             <mat-card-title style="margin:30px 0px 0px 30px;">Login</mat-card-title>
             <mat-card-content>
