--- a/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.scss
+++ b/src/app/modules/evaluation/evaluationmaster/evaluationmaster.component.scss
@@ -16,7 +16,8 @@ mat-cell:first-of-type{
 .mat-column-DisplayResult,
 .mat-column-Active,
 .mat-column-AppendAnswer,
-.mat-column-EvaluationMasterId
+.mat-column-EvaluationMasterId,
+.mat-column-Confidential
 {
     flex:1 1 70px;
     justify-content: center;
