--- a/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
+++ b/src/app/modules/attendance/attendanceboard/attendanceboard.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-    <mat-card-title style="margin:20px">Attendance</mat-card-title>
+    <mat-card-title class="matcardmargin">Attendance</mat-card-title>
     <mat-card-subtitle></mat-card-subtitle>
-    <mat-card-content style="margin:20px">        
+    <mat-card-content class="matcardmargin">        
             <mat-tab-group [selectedIndex]="selectedIndex" (selectedIndexChange)="tabChange($event)">
                 <mat-tab *ngFor="let component of components;let indx=index">
                     <ng-template mat-tab-label>
@@ -11,7 +11,6 @@
                         <div #container></div>
                     </ng-template>
                 </mat-tab>
-            </mat-tab-group>
-        
+            </mat-tab-group>        
     </mat-card-content>
 </mat-card>
