--- a/src/app/modules/attendance/studenttotalattendance/studenttotalattendance.component.html
+++ b/src/app/modules/attendance/studenttotalattendance/studenttotalattendance.component.html
@@ -6,7 +6,7 @@
     <div style="padding: 15px;">
         <div style="flex-direction: row;">
             <form [formGroup]="searchForm">
-                <mat-form-field appearance="outline" [style.width.px]="200">
+                <mat-form-field appearance="outline">
                     <mat-label>Exam</mat-label>
                     <mat-select formControlName="searchExamId">
                         <mat-option *ngFor="let item of Exams" [value]="item.ExamId">
