--- a/src/app/modules/studentexam/exammarkconfig/exammarkconfig.component.html
+++ b/src/app/modules/studentexam/exammarkconfig/exammarkconfig.component.html
@@ -59,7 +59,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                         <mat-form-field appearance="outline">
-                            <textarea matInput (blur)="Calculatemark()" [value]="element.Formula"
+                            <textarea matInput (blur)="Calculatemark(element)" [value]="element.Formula"
                                 [(ngModel)]="element.Formula" [maxlength]="1000"></textarea>
                         </mat-form-field>
                     </mat-cell>
