--- a/src/app/modules/attendance/defaulter/defaulter.component.html
+++ b/src/app/modules/attendance/defaulter/defaulter.component.html
@@ -16,8 +16,8 @@
             </mat-option>
         </mat-select>
     </mat-form-field>
-    <mat-form-field appearance="outline" [style.width.px]="100">
-        <mat-label>Days more than</mat-label>
+    <mat-form-field appearance="outline" [style.width.px]="180">
+        <mat-label>Absence not approved days</mat-label>
         <input matInput formControlName="searchAbsentCount" autocomplete="Off" type="number">           
     </mat-form-field>
     <!-- <mat-form-field appearance="outline" [style.width.px]="150">
