--- a/src/app/modules/studentexam/verifyresults/verifyresults.component.scss
+++ b/src/app/modules/studentexam/verifyresults/verifyresults.component.scss
@@ -22,7 +22,7 @@ mat-cell{
     display: flex;
     justify-content: center;
     align-items: center;
-    align-self: stretch;
+    //align-self: stretch;
 }
 .mat-column-Student{
     justify-content: flex-start;
@@ -35,7 +35,9 @@ mat-cell{
     justify-content:center;
     flex: 1 1 120px;
 }
-
+// .element-row{
+//     align-items: baseline;
+// }
 // mat-cell:nth-child(1),
 // mat-header-cell:nth-child(1) {
 //     flex: 0 0 10%;
