--- a/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
+++ b/src/app/modules/student/studentprogressreport/studentprogressreport.component.html
@@ -1,8 +1,8 @@
 <mat-card>
     <mat-card-title style="margin:20px"><strong>Progress Report</strong></mat-card-title>
     <mat-card-subtitle
-        style="margin-left:30px; align-items: center; font-weight: bold; background-color:lightgray;padding:5px;display: flex;justify-content: space-between;">
-        <span>{{StudentName}}</span>
+        style="margin-left:20px; align-items: center; font-weight: bold; background-color:lightgray;padding:5px;display: flex;justify-content: space-between;">
+        <span></span>
         <div style="display:flex;">
             <span style="margin-right: 15px;">
                 <button (click)="back()" matTooltip="dashboard" mat-raised-button>
@@ -11,109 +11,128 @@
             </span>
         </div>
     </mat-card-subtitle>
-    <mat-card-content style="margin:20px">
-        <!-- <div style="padding:15px 15px 10px 15px;">
-    <div><strong>Progress Report</strong></div>
-</div> -->
+    <mat-card-content>
         <mat-spinner *ngIf="PageLoading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
-        <div style="width: 100%;" id="printSection">
-            <div style="margin-top:15px;margin-bottom:15px">
-                <mat-table #table [dataSource]="NonGradedSubjectsDataSource" matSort
-                    *ngIf="NonGradedDisplayColumns.length>1">
-                    <ng-container *ngFor="let disCol of NonGradedDisplayColumns; let colIndex = index"
-                        matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header><span
-                                *ngIf="disCol!='Subject'">{{disCol}}</span>
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let element">
-                            {{element[disCol]}}
-                        </mat-cell>
-                    </ng-container>
-                    <mat-header-row *matHeaderRowDef="NonGradedDisplayColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: NonGradedDisplayColumns;" class="element-row"></mat-row>
-                </mat-table>
-            </div>
-            <div style="margin-top:15px;margin-bottom:15px" *ngIf="GradedDisplayColumns.length>1">
-                <div style="font-weight:bold">Graded Subjects</div>
-                <mat-table #table [dataSource]="GradedSubjectsDataSource" matSort>
-                    <ng-container *ngFor="let disCol of GradedDisplayColumns; let colIndex = index"
-                        matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header><span
-                                *ngIf="disCol!='Subject'">{{disCol}}</span>
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let element">
-                            <span style="font-weight:bold"
-                                *ngIf="element[disCol]==OverAllGrade">{{element[disCol]}}</span>
-                            <span *ngIf="element[disCol]!=OverAllGrade">{{element[disCol]}}</span>
-                        </mat-cell>
-                    </ng-container>
-                    <mat-header-row *matHeaderRowDef="GradedDisplayColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: GradedDisplayColumns;" class="element-row"></mat-row>
-                </mat-table>
-            </div>
-            <div style="margin-top:15px;margin-bottom:15px">
-                <mat-table #table [dataSource]="dataSource" matSort *ngIf="DisplayColumns.length>1">
-                    <ng-container *ngFor="let disCol of DisplayColumns; let colIndex = index" matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header><span
-                                *ngIf="disCol!='FirstCol'">{{disCol}}</span>
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let element">
-                            {{element[disCol]}}
-                        </mat-cell>
-                    </ng-container>
-                    <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
-                </mat-table>
-            </div>
-            <div style="margin-top:15px;margin-bottom:15px">
-                <mat-table #table [dataSource]="dataSourceEvaluation" matSort
-                    *ngIf="EvaluationDisplayedColumns.length>1">
-                    <ng-container *ngFor="let disCol of EvaluationDisplayedColumns; let colIndex = index"
-                        matColumnDef="{{disCol}}">
-                        <mat-header-cell *matHeaderCellDef mat-sort-header style="border-right:1px solid lightgray">
-                            <span style="padding-left: 15px;"
-                                *ngIf="disCol!='FirstCol' && disCol!='Description'">{{disCol}}</span>
-                        </mat-header-cell>
-                        <mat-cell *matCellDef="let element" style="border-right:1px solid lightgray">
-                            <span style="width:100%;display:flex; flex-direction:column;justify-content: flex-start;">
-                                <span *ngIf="disCol =='Description' && 
+        <div id="printSection">
+            <div style="margin-right:0px;margin-left:0px;width: 100%;box-sizing: border-box;padding: 15px; border: 1px solid lightgray; display: flex; justify-content: center;flex-direction: column;">
+                <div style="display: flex;justify-content: center;width:100%;flex-direction: column;">
+                    <div *ngFor="let item of CommonHeader" [innerHTML]="item.Description|encodeHTML"
+                        style="display: flex;justify-content: center;">
+                    </div>
+                </div>
+                <div *ngFor="let item of StudentName"
+                    style="margin:20px;display: flex;justify-content: center;flex-direction: column;">
+                    <div><b>Name</b> : {{item.Name}}</div>
+                    <div><b>Class </b>: {{item.Class}}, <b>Section</b> : {{item.Section}}, <b>Roll No.</b> :
+                        {{item.RollNo}}
+                    </div>
+                </div>
+                <div style="margin-top:15px;margin-bottom:15px">
+                    <mat-table #table [dataSource]="NonGradedSubjectsDataSource" matSort
+                        *ngIf="NonGradedDisplayColumns.length>1">
+                        <ng-container *ngFor="let disCol of NonGradedDisplayColumns; let colIndex = index"
+                            matColumnDef="{{disCol}}">
+                            <mat-header-cell *matHeaderCellDef mat-sort-header><span
+                                    *ngIf="disCol!='Subject'">{{disCol}}</span>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let element">
+                                {{element[disCol]}}
+                            </mat-cell>
+                        </ng-container>
+                        <mat-header-row *matHeaderRowDef="NonGradedDisplayColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: NonGradedDisplayColumns;" class="element-row"></mat-row>
+                    </mat-table>
+                </div>
+                <div style="margin-top:15px;margin-bottom:15px" *ngIf="GradedDisplayColumns.length>1">
+                    <div style="margin-left:20px;font-weight:bold">Graded Subjects</div>
+                    <mat-table #table [dataSource]="GradedSubjectsDataSource" matSort>
+                        <ng-container *ngFor="let disCol of GradedDisplayColumns; let colIndex = index"
+                            matColumnDef="{{disCol}}">
+                            <mat-header-cell *matHeaderCellDef mat-sort-header style="display:none">
+                                <span *ngIf="disCol!='Subject'">{{disCol}}</span>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let element">
+                                <span style="font-weight:bold"
+                                    *ngIf="element[disCol]==OverAllGrade">{{element[disCol]}}</span>
+                                <span *ngIf="element[disCol]!=OverAllGrade">{{element[disCol]}}</span>
+                            </mat-cell>
+                        </ng-container>
+                        <mat-header-row *matHeaderRowDef="GradedDisplayColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: GradedDisplayColumns;" class="element-row"></mat-row>
+                    </mat-table>
+                </div>
+                <div style="margin-top:15px;margin-bottom:15px">
+                    <mat-table #table [dataSource]="dataSource" matSort *ngIf="DisplayColumns.length>1">
+                        <ng-container *ngFor="let disCol of DisplayColumns; let colIndex = index"
+                            matColumnDef="{{disCol}}">
+                            <mat-header-cell *matHeaderCellDef mat-sort-header style="display:none"><span
+                                    *ngIf="disCol!='FirstCol'">{{disCol}}</span>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let element">
+                                {{element[disCol]}}
+                            </mat-cell>
+                        </ng-container>
+                        <mat-header-row *matHeaderRowDef="DisplayColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: DisplayColumns;" class="element-row"></mat-row>
+                    </mat-table>
+                </div>
+                <div style="margin-top:15px;margin-bottom:15px;">
+                    <mat-table #table [dataSource]="dataSourceEvaluation" matSort
+                        *ngIf="EvaluationDisplayedColumns.length>1">
+                        <ng-container *ngFor="let disCol of EvaluationDisplayedColumns; let colIndex = index"
+                            matColumnDef="{{disCol}}">
+                            <mat-header-cell *matHeaderCellDef mat-sort-header style="display:none;border:1px solid lightgray">
+                                <span style="padding-left: 15px;"
+                                    *ngIf="disCol!='FirstCol' && disCol!='Description'">{{disCol}}</span>
+                            </mat-header-cell>
+                            <mat-cell *matCellDef="let element" style="border-right:1px solid lightgray">
+                                <span
+                                    style="width:100%;display:flex; flex-direction:column;justify-content: flex-start;">
+                                    <span *ngIf="disCol =='Description' && 
                             element.QuestionnaireType =='Evaluation Master'"
-                                    style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#A4de02">
-                                    {{element[disCol]}}</span>
-                                <span *ngIf="disCol =='Description'
+                                        style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#A4de02">
+                                        {{element[disCol]}}</span>
+                                    <span *ngIf="disCol =='Description'
                                 && element.QuestionnaireType=='Heading'"
-                                    style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#1E5631">
-                                    {{element[disCol]}}</span>
-                                <span *ngIf="disCol =='Description' && element.QuestionnaireType=='Sub Heading'"
-                                    style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#76ba1b">
-                                    {{element[disCol]}}</span>
-                                <span *ngIf="element.QuestionnaireType=='Questionnaire' && disCol =='Description'"
-                                    style="width: 100%;padding: 15px 15px 10px 0px;">
-                                    <mat-icon class="icon">star_outline</mat-icon> {{element[disCol]}}
-                                </span>
-                                <span [innerHTML]="element[disCol]|encodeHTML"
-                                    style="align-self:stretch; width: 100%;min-height: 50px;padding: 15px;" *ngIf="element['QuestionnaireType']!='Evaluation Master' 
+                                        style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#1E5631">
+                                        {{element[disCol]}}</span>
+                                    <span *ngIf="disCol =='Description' && element.QuestionnaireType=='Sub Heading'"
+                                        style="font-weight: bold; width: 100%;padding: 15px 15px 10px 0px;color:#76ba1b">
+                                        {{element[disCol]}}</span>
+                                    <span *ngIf="element.QuestionnaireType=='Questionnaire' && disCol =='Description'"
+                                        style="width: 100%;padding: 15px 15px 10px 0px;">
+                                        <mat-icon class="icon">star_outline</mat-icon> {{element[disCol]}}
+                                    </span>
+                                    <span [innerHTML]="element[disCol]|encodeHTML"
+                                        style="align-self:stretch; width: 100%;padding: 15px;" *ngIf="element['QuestionnaireType']!='Evaluation Master' 
                                    && disCol!='Description' 
                                    && disCol!='QuestionnaireType' 
                                    && disCol!='EvaluationMasterId'
                                    && disCol!='EvaluationName'
                                    && element[disCol]!=undefined 
                                    && element[disCol].length>0">
+                                    </span>
                                 </span>
-                            </span>
-                        </mat-cell>
-                    </ng-container>
-                    <mat-header-row *matHeaderRowDef="EvaluationDisplayedColumns"></mat-header-row>
-                    <mat-row *matRowDef="let row; columns: EvaluationDisplayedColumns;" class="element-row"></mat-row>
-                </mat-table>
+                            </mat-cell>
+                        </ng-container>
+                        <mat-header-row *matHeaderRowDef="EvaluationDisplayedColumns"></mat-header-row>
+                        <mat-row *matRowDef="let row; columns: EvaluationDisplayedColumns;" class="element-row">
+                        </mat-row>
+                    </mat-table>
+                </div>
             </div>
         </div>
-        <div style="display:flex;justify-content:center;width:100%">
+        <div style="display:flex;justify-content:center;width:100%;margin:5px">
             <button *ngIf="NonGradedMarkResults.length>0 || GradedMarksResults.length>0" [disabled]="loading"
                 matTooltip="print" printSectionId="printSection" [useExistingCss]="true" ngxPrint
-                class="mat-raised-button">
+                mat-raised-button color="accent">
                 <mat-icon>print</mat-icon>
             </button>
+            <!-- <button [disabled]="loading || Permission=='read'" matTooltip="print"
+                    *ngIf="NonGradedMarkResults.length>0 || GradedMarksResults.length>0"
+                    (click)="print()" mat-raised-button color="accent">
+                    <mat-icon>print</mat-icon>
+                </button> -->
         </div>
     </mat-card-content>
 </mat-card>
