--- a/src/app/modules/studentexam/examsubjectmarkentry/examsubjectmarkentry.component.html
+++ b/src/app/modules/studentexam/examsubjectmarkentry/examsubjectmarkentry.component.html
@@ -39,6 +39,11 @@
                 </mat-option>
             </mat-select>
         </mat-form-field>
+        <!-- <mat-form-field> -->
+        <mat-checkbox style="margin-right:15px" formControlName="updateCheckBox" (click)="$event.stopPropagation()"
+            [checked]="false"> Update per latest formula
+        </mat-checkbox>
+        <!-- </mat-form-field> -->
         <button [disabled]="loading" mat-raised-button color="accent" (click)="GetStudentSubjects()">
             <mat-icon>search</mat-icon>
             <mat-icon *ngIf="loading">
@@ -88,15 +93,20 @@
     <div style="margin-top:30px;" data-expand="false" #expandWrap>
         <span *ngIf="expandWrap.dataset.expand == 'false'" (click)="expandWrap.dataset.expand = 'true'">
             <mat-icon>info</mat-icon>
-            Guides...</span>
+            Guides...
+        </span>
         <span *ngIf="expandWrap.dataset.expand == 'true'" (click)="expandWrap.dataset.expand = 'false'">
             <ol><b>Settings required before mark entry.</b>
                 <li>Subject Category for each class subjects.</li>
-                <li>Subject Components.</li>
+                <li>Subject mark Components (even for graded subjects).</li>
                 <li>Student Subjects.</li>
                 <li>Student Grade.</li>
                 <li>Exam N Calculate.</li>
+                <li>Exam Mark Config.</li>
             </ol>
+            <ul>
+                <li>If the selected exam has formula in <b>Exam Mark Config</b> and you want to update marks according to the latest formula, check <b>update</b> checkbox. 
+                <br>Other wise system will display the existing marks (if any).</li></ul>
         </span>
     </div>
 </div>
