--- a/src/app/modules/studentexam/studentgrade/studentgrade.component.scss
+++ b/src/app/modules/studentexam/studentgrade/studentgrade.component.scss
@@ -2,11 +2,14 @@ mat-form-field{
     width: 98%;
     margin-right: 15px;
 }
-.mat-column-StudentGradeId,
-.mat-column-SubjectCategoryId,
-.mat-column-GradeStatusId,
 .mat-column-Points,
-.mat-column-Sequence
+.mat-column-Sequence,
+.mat-column-StudentGradeId
+{
+    flex:1 0 60px;
+}
+.mat-column-SubjectCategoryId,
+.mat-column-GradeStatusId
 {    
     flex:1 0 100px;
 }
